--- a/documents.html
+++ b/documents.html
@@ -172,35 +172,46 @@
 
         @media print {
             @page {
-                margin-top: 0;
-                margin-bottom: 0;
+                margin: 1cm;
             }
             body {
-                background: none !important;
+                background: white !important;
                 margin: 0 !important;
                 padding: 0 !important;
             }
             body * { visibility: hidden; }
-            #printArea, #printArea * { visibility: visible; }
+            #printArea, #printArea * { 
+                visibility: visible; 
+            }
             #printArea {
-                position: absolute;
-                left: 0;
-                top: 0;
+                position: relative;
                 width: 100%;
                 margin: 0 !important;
                 padding: 0 !important;
                 display: block !important;
+                overflow: visible !important;
             }
             #rapportAperçu {
                 border: none !important;
                 padding: 0 !important;
                 margin: 0 !important;
-                font-size: 8pt !important;
+                font-size: 9pt !important;
                 color: black !important;
+                overflow: visible !important;
             }
-            .table { width: 100% !important; border-collapse: collapse !important; }
+            .table { 
+                width: 100% !important; 
+                border-collapse: collapse !important; 
+                page-break-inside: auto;
+            }
+            .table tr { page-break-inside: avoid; page-break-after: auto; }
             .table th, .table td { border: 1px solid #333 !important; padding: 4px !important; }
             .no-print { display: none !important; }
+            /* Masquer les éléments Bootstrap modaux inutiles à l'impression */
+            .modal { position: absolute !important; left: 0 !important; top: 0 !important; margin: 0 !important; padding: 0 !important; overflow: visible !important; }
+            .modal-dialog { max-width: 100% !important; margin: 0 !important; }
+            .modal-content { border: none !important; box-shadow: none !important; }
+            .modal-header, .modal-footer, .btn-close { display: none !important; }
         }
     </style>
 </head>
@@ -270,7 +281,7 @@
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
-                <div class="row">
+                <div class="row no-print">
                     <div class="col-md-6">
                         <label class="small fw-bold">Année</label>
                         <div class="d-flex gap-1">
@@ -298,7 +309,7 @@
                     </div>
                 </div>
 
-                <hr>
+                <hr class="no-print">
                 <div id="printArea">
                     <div id="rapportAperçu" class="mt-3">
                         <p class="text-center text-muted">L'aperçu du rapport s'affichera ici après clic sur "Aperçu".</p>
@@ -359,7 +370,6 @@
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
-    // --- Gestion du Statut de Connexion ---
     const connectedRef = ref(db, ".info/connected");
     onValue(connectedRef, (snap) => {
         const statusDiv = document.getElementById('connectionStatus');
@@ -372,13 +382,11 @@
         }
     });
 
-    // --- Écoute des Paiements Cloud ---
     onValue(ref(db, 'paiements'), (snapshot) => {
         const data = snapshot.val();
         window.historiquePaiementsCloud = data ? Object.keys(data).map(k => data[k]) : [];
     });
 
-    // --- Écoute des Dépenses Cloud ---
     onValue(ref(db, 'depenses'), (snapshot) => {
         const data = snapshot.val();
         window.depensesCloud = data ? Object.keys(data).map(k => data[k]) : [];
@@ -466,7 +474,6 @@
         const fin = parseInt(document.getElementById('rapportMoisFin').value);
         const famille = document.getElementById('headerFamilyName').innerText;
         
-        // Utilisation des données Cloud synchronisées
         const historique = window.historiquePaiementsCloud || [];
         const depenses = window.depensesCloud || [];
         const estMensuelle = cotisFiltreRaw.includes('(Mens.)');
